fix: replace deprecated Locale(String), URL(String), BigDecimal.setScale(int,int) with modern equivalents